@@ -4,33 +4,43 @@
 #include <stdlib.h>
 #include <unistd.h>
 #include <string.h>
-
-char *codepage = NULL;
+#include <synce_log.h>
 
 static void show_usage(const char* name)
 {
 	fprintf(stderr,
 			"Syntax:\n"
 			"\n"
-			"\t%s [-c CODEPAGE] VCARD_FILE CONTACT_FILE\n"
+			"\t%s [-d LEVEL] [-c CODEPAGE] VCARD_FILE CONTACT_FILE\n"
 			"\n"
+			"\t-d LEVEL          Set debug log level\n"
+			"\t                  0 - No logging\n"
+			"\t                  1 - Errors only (default)\n"
+			"\t                  2 - Errors and warnings\n"
+			"\t                  3 - Errors, warnings and info\n"
+			"\t                  4 - Everything\n"
                         "\t-c CODEPAGE       Codepage to be used for CONTACT_FILE (default CP1252) \n"
 			"\tVCARD_FILE        The source vcard filename\n"
 			"\tCONTACT_FILE      The destination contact filename\n",
 			name);
 }
 
-static bool handle_parameters(int argc, char** argv, char** source, char** dest)
+static bool handle_parameters(int argc, char** argv, char** source, char** dest, char** codepage)
 {
 	int c;
 	int path_count;
+	int log_level = SYNCE_LOG_LEVEL_ERROR;
 
-	while ((c = getopt(argc, argv, "c:")) != -1)
+	while ((c = getopt(argc, argv, "d:c:")) != -1)
 	{
 		switch (c)
 		{
+			case 'd':
+				log_level = atoi(optarg);
+				break;
+			
 			case 'c':
-				codepage = optarg;
+				*codepage = optarg;
 				break;
 			
 			case 'h':
@@ -40,6 +50,8 @@ static bool handle_parameters(int argc, char** argv, char** source, char** dest)
 		}
 	}
 				
+	synce_log_set_level(log_level);
+
 	path_count = argc - optind;
 	if (path_count != 2) {
 		fprintf(stderr, "%s: You need to specify source and destination file names on command line\n\n", argv[0]);
@@ -62,9 +74,11 @@ int main(int argc, char** argv)
 	long file_size = 0;
 	uint8_t* buffer = NULL;
 	size_t buffer_size = 0;
-        char *source = NULL, *dest = NULL;
+	char *source = NULL, *dest = NULL;
+	char *codepage = NULL;
 
-	if (!handle_parameters(argc, argv, &source, &dest))
+
+	if (!handle_parameters(argc, argv, &source, &dest, &codepage))
 		goto exit;
 
 	if (!codepage)
